recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:10: error: reassignment to val
  steps=steps -1
       ^